# text2SQLBenchmarkingTool

./: README.md  benchmark.py  benchmark_analysis.ipynb  config.py  db_handler.py  llm_connectors.py  pyproject.toml
data/: library.db  schemalibrarydb.txt
inserts/: AUTHOR.sql  BOOK.sql  BOOK_LOAN.sql  EMPLOYEE.sql  READER.sql  ROOM.sql  ROOM_RESERVATION.sql  SCHEMA.sql
test_cases/: nt_queries.json  queries.json
