[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
